<resources>
    <string name="app_name">DTourMap</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>

    <!--Menu-->
    <string name="action_profile">Profile</string>
    <string name="action_my_report">My reports</string>
    <string name="action_settings">Settings</string>
    <string name="action_share">Share</string>
    <string name="action_rate">Rate</string>
    <!--String-->
    <string name="posizione_report_default">Long press on the map to change address</string>
    <string name="insert_title">Title</string>
    <string name="insert_resource">Source(example newspaper article)</string>
    <string name="retrieve_address">Fetching position...</string>
    <string name="insert_description">Insert report details</string>

    <!--CATEGORIE-->
    <string name="furto">Stealing</string>
    <string name="scippo">Snatching</string>
    <string name="vandalismo">Vandalism</string>
    <string name="spaccio">Drug dealing</string>
    <string name="altro">Other</string>
    <string name="select_a_category">Select a category</string>


    <!--TIME SLOT-->
    <string name="insert_time">Insert time sheets</string>
    <string name="time_slot_0_4">00–04</string>
    <string name="time_slot_4_8">04–08</string>
    <string name="time_slot_8_12">08–12</string>
    <string name="time_slot_12_16">12–16</string>
    <string name="time_slot_16_20">16–20</string>
    <string name="time_slot_20_24">20–00</string>

    <!--USER-->
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="new_user">New User</string>
    <string name="login">Login</string>
    <string name="signin">Sign In</string>
    <string name="email">E-mail</string>
    <string name="sign_up">Sign Up</string>
    <string name="sign_up_success">Sign up success</string>
    <string name="sign_up_error">Sign up error</string>
    <string name="sign_in_error">Authentication failed</string>

    <string name="auth_failed">Authentication failed!</string>
    <string name="insert_email_error">Insert an email!</string>
    <string name="insert_password_error">Insert a password!</string>
    <string name="login_message">You have to login in order to create a new report</string>


    <string name="other_info">Other info</string>
    <string name="timeline">Timeline</string>

    <string name="posted_on">Reported on&#160;</string>
    <string name="by">&#160;by&#160;</string>

    <string name="no_current_position">Cannot find user current location. Press for 2 seconds on the map to add a new report</string>
    <string name="login_in_progress">Login in progress</string>
    <string name="enter_anon">Login as guest</string>
    <string name="continue_anon">Continue as guest</string>
    <string name="add_widget">Add widget</string>
    <string name="no_data_widget">You can see here your last created report</string>
    <string name="name">Full name</string>
    <string name="title_activity_maps">Map</string>
    <string name="title_activity_coming_soon">ComingSoonActivity</string>
    <string name="coming_soon">Coming soon!</string>
    <string name="file_uploaded">File uploaded</string>
    <string name="new_report_success">Created new report!</string>



</resources>
