<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <data>
        <import type="android.view.View" />
        <variable name="report" type="com.example.maola.dtourmap.Model.Report"/>
    </data>


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/background_light"
        android:paddingBottom="25dp"
        tools:context=".reportActivities.NewReportActivity">

        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="4dp"
            android:layout_marginTop="4dp">

            <TextView
                android:id="@+id/new_repo_tv_title_address"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="4dp"
                android:drawablePadding="8dp"
                android:drawableStart="@drawable/location_pointer"
                android:ems="10"
                android:fontFamily="sans-serif-medium"
                android:text="@{report.address}"
                android:textColor="@android:color/black"
                android:textSize="@dimen/text_title"
                android:textStyle="bold"
                tools:layout_editor_absoluteX="16dp"
                tools:layout_editor_absoluteY="16dp" />


            <TextView
                android:id="@+id/new_repo_tv_author"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/title_padding"
                android:layout_marginTop="4dp"
                android:textSize="@dimen/text_small"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/new_repo_tv_title_address" />

            <LinearLayout
                android:id="@+id/main_info_layout"
                android:layout_width="match_parent"
                android:layout_height="69dp"
                android:layout_marginEnd="16dp"
                android:layout_marginStart="@dimen/body_padding"
                android:layout_marginTop="16dp"
                android:orientation="vertical"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/new_repo_tv_author">


                <TextView
                    android:id="@+id/category_spinner"
                    style="@style/MyDefaultTextStyle"
                    android:layout_width="match_parent"
                    android:text='@{report.typology != null ? report.typology :"nessuna categoria"}'
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp" />

                <TextView
                    android:id="@+id/new_repo_tv_source"
                    style="@style/MyDefaultTextStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="4dp"
                    android:drawablePadding="8dp"
                    android:drawableStart="@drawable/newspaper"
                    android:text='@{report.source != null ? report.source :"Nessuna fonte disponibile"}'
                    />

            </LinearLayout>

            <View
                android:id="@+id/view2"
                style="@style/Divider_darker"
                android:layout_marginTop="16dp"
                android:visibility="visible"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/main_info_layout" />

            <View
                android:id="@+id/view3"
                style="@style/Divider_lighter"
                android:visibility="visible"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/view2" />

            <TextView
                android:id="@+id/timeline"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:fontFamily="sans-serif-medium"
                android:text="Timeline"
                android:textSize="18sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/view2" />

            <TextView
                android:id="@+id/new_repo_set_date"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:drawableStart="@android:drawable/ic_menu_save"
                app:layout_constraintEnd_toStartOf="@+id/timeline"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/timeline" />

            <LinearLayout
                android:id="@+id/linearLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:gravity="center_horizontal"
                android:orientation="horizontal"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/new_repo_set_date">


                <CheckBox
                    android:id="@+id/checkBox"
                    style="@style/TimeCheckboxStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:button="@null"
                    android:checked="false"
                    android:drawableTop="?android:attr/listChoiceIndicatorMultiple"
                    android:text="@string/time_slot_0_4" />


                <android.support.v4.widget.Space
                    android:layout_width="8dp"
                    android:layout_height="wrap_content" />

                <CheckBox
                    android:id="@+id/checkBox2"
                    style="@style/TimeCheckboxStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/time_slot_4_8" />

                <android.support.v4.widget.Space
                    android:layout_width="8dp"
                    android:layout_height="wrap_content" />

                <CheckBox
                    android:id="@+id/checkBox3"
                    style="@style/TimeCheckboxStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/time_slot_8_12" />

                <android.support.v4.widget.Space
                    android:layout_width="8dp"
                    android:layout_height="wrap_content" />

                <CheckBox
                    android:id="@+id/checkBox4"
                    style="@style/TimeCheckboxStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/time_slot_12_16" />

                <android.support.v4.widget.Space
                    android:layout_width="8dp"
                    android:layout_height="wrap_content" />

                <CheckBox
                    android:id="@+id/checkBox5"
                    style="@style/TimeCheckboxStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/time_slot_16_20" />

                <android.support.v4.widget.Space
                    android:layout_width="8dp"
                    android:layout_height="wrap_content" />

                <CheckBox
                    android:id="@+id/checkBox6"
                    style="@style/TimeCheckboxStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/time_slot_20_24" />

            </LinearLayout>


            <View
                android:id="@+id/view4"
                style="@style/Divider_darker"
                android:layout_marginTop="16dp"
                android:visibility="visible"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/linearLayout" />

            <View
                android:id="@+id/view5"
                style="@style/Divider_lighter"
                android:visibility="visible"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/view4" />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:fontFamily="sans-serif-medium"
                android:text="Other info"
                android:textColor="@android:color/black"
                android:textSize="@dimen/text_title"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/view5" />

            <TextView
                android:id="@+id/new_repo_tv_add_other_info"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="12dp"
                android:text='@{report.description != null ? report.description :"Nessuna descrizione disponibile"}'
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView2" />

            <ImageButton
                android:id="@+id/new_repo_tv_add_picture"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:background="@android:color/darker_gray"
                android:contentDescription="foto in caricamento"
                android:minHeight="150dp"
                android:visibility='@{report.picture == null ? View.INVISIBLE : View.VISIBLE}'
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/new_repo_tv_add_other_info" />

        </android.support.constraint.ConstraintLayout>


    </ScrollView>
</layout>